--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
-group 'io.github.tronprotocol'
-version '1.2.0'
+group 'io.github.graciamuniz'
+version '1.2.0-SNAPSHOT'
 
 buildscript {
     repositories {
@@ -16,6 +16,9 @@ apply plugin: 'java'
 apply plugin: 'com.google.protobuf'
 apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'application'
+apply plugin: 'maven-publish'
+apply plugin: 'signing'
+apply plugin: "io.github.gradle-nexus.publish-plugin"
 
 def protobufVersion = "3.19.2"
 def grpcVersion = "1.14.0"
@@ -87,6 +90,7 @@ dependencies {
     })
     implementation group: 'com.aliyun', name: 'alidns20150109', version: '3.0.1'
     implementation group: 'xerces', name: 'xercesImpl', version: '2.11.0'
+    implementation 'io.netty:netty-transport-native-epoll:4.1.27.Final:linux-x86_64'
 }
 
 tasks.matching { it instanceof Test }.all {
@@ -172,4 +176,61 @@ artifacts {
     archives javadocJar, sourcesJar
 }
 
+publishing {
 
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+            artifact sourcesJar
+            artifact javadocJar
+            pom {
+                name = 'libp2p'
+                description = 'libp2p is a p2p network SDK implemented in java language.'
+                url = 'https://github.com/tronprotocol/libp2p'
+                licenses {
+                    license {
+                        name = 'The Apache Software License, Version 2.0'
+                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
+                developers {
+                    developer {
+                        name = 'chengtx01'
+                        email = 'ctxhorse@gmail.com'
+                    }
+                    developer {
+                        name = 'jiangyuanshu'
+                        email = '317787106@qq.com'
+                    }
+                    developer {
+                        name = 'wubin01'
+                        email = 'wb_bupt@163.com'
+                    }
+                }
+                scm {
+                    url = 'https://github.com/tronprotocol/libp2p'
+                    connection = 'scm:git:git://github.com/tronprotocol/libp2p.git'
+                    developerConnection = 'scm:git:ssh://git@github.com:tronprotocol/libp2p.git'
+                }
+            }
+        }
+    }
+}
+
+nexusPublishing {
+    repositories {
+        sonatype {
+            //only for users registered in Sonatype after 24 Feb 2021
+            nexusUrl = uri("https://s01.oss.sonatype.org/service/local/")
+            snapshotRepositoryUrl = uri("https://s01.oss.sonatype.org/content/repositories/snapshots/")
+            username = "${sonatypeUsername}"
+            password = "${sonatypePassword}"
+        }
+    }
+}
+
+signing {
+    // https://discuss.gradle.org/t/use-of-signing-plugin-with-gpg-agent-fails-with-gradle-5-x/38351/2
+    useGpgCmd()
+    sign publishing.publications.mavenJava
+}
